--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Dave
+first_name: Johannes
 middle_name:
-last_name: Van Veen
-email: davemvanveen@gmail.com
-description: DVV's personal site
+last_name: Moll
+email: johannes.moll@tum.com
+description: Johannes Moll's personal site
 #description: > # the ">" symbol means to ignore newlines until "footer_text:"
 #A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: 
@@ -15,7 +15,7 @@ keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 💡 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://davevanveen.com # the base hostname & protocol for your site
+url: https://jomoll.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
