--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Johannes
 middle_name:
 last_name: Moll
-email: johannes.moll@tum.com
+#email: 
 description: Johannes Moll's personal site
 #description: > # the ">" symbol means to ignore newlines until "footer_text:"
 #A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
@@ -69,7 +69,7 @@ linkedin_username: johannes-moll-ba7160203 # your LinkedIn user name
 scholar_userid: oXUB1p8AAAAJ&hl # your Google Scholar ID
 github_username: jomoll # your GitHub user name
 #instagram_id: dave.vv
-strava_userid: 
+#strava_userid: 
 # to add more socials, see _includes/socials.html
 
 contact_note: >
