Switch to GA4 gtag analytics

--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,11 @@ contact_note: >
 # For Google Analytics, see https://support.google.com/analytics/answer/10447272?hl=en&ref_topic=14088998&sjid=5129943941510317771-SA#zippy=%2Cgoogle-sites
 # and follow the instructions for Google Sites. You will need to create a Google Analytics property and copy the Google tag ID.
 #google_analytics: UA-XXXXXXXXX # out your google-analytics code
-google_analytics: UA-XXXXXXXX # out your google-analytics code
-panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
-
+#panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
+analytics:
+  provider: google-gtag
+  google:
+    tracking_id: G-76X98Z3T74
 # For Google Search Console, see https://support.google.com/webmasters/answer/9008080?hl=en#meta_tag_verification&zippy=%2Chtml-tag
 google_site_verification:  # your google-site-verification ID (Google Search Console)
 bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
